[2269][templates] tidy up search sidebar (fix header spacing, remove link to api docs for now)

--- a/ckanext/ecportal/public/css/ecportal.css
+++ b/ckanext/ecportal/public/css/ecportal.css
@@ -358,6 +358,12 @@ footer li {
 #sidebar ul {
     margin-left: 0;
 }
+#sidebar div.facet-box {
+    margin-bottom: 2em;
+}
+#sidebar h2 {
+    line-height: 18px;
+}
 
 /****************************************************************************/
 /* Home page
